--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageProjectUrl>https://sonomirco/Pipeline/</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <LangVersion>8</LangVersion>
+    <PackageVersion>0.1.2</PackageVersion>
+    <PackageId>Pipeliine</PackageId>
+    <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
