--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -46,13 +46,13 @@ jobs:
           tag: ${{ steps.gitversion.outputs.semVer }}
       
       - name: 🧱 Build project
-        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release
+        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:PackageVersion=${{ steps.gitversion.outputs.semVer }}
 
       - name: 📘 Create Release
         id: create_release
         uses: actions/create-release@v1
         with:
           tag_name: ${{ steps.gitversion.outputs.semVer }}
-          release_name: Release ${{ steps.gitversion.outputs.semVer }}
+          release_name: ${{ steps.gitversion.outputs.semVer }}
           draft: false
-          prerelease: true
+          prerelease: false
