--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -7,7 +7,6 @@ env:
   PROJECT_PATH: 'Pipeline.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
   GIT_SOURCE_URL: 'https://nuget.pkg.github.com/sonomirco/index.json'
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   # This workflow contains a single job called "build"
@@ -50,4 +49,4 @@ jobs:
         run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.gitversion.outputs.semVer }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
     
       - name: 🚀 Publish the package
-        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg --skip-duplicate -k ${GITHUB_TOKEN}
+        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg --skip-duplicate -k ${{ secrets.GITHUB_TOKEN }}
