--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -6,7 +6,6 @@ on:
 env:
   PROJECT_PATH: 'Pipeline.csproj'
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
-  GIT_SOURCE_URL: 'https://nuget.pkg.github.com/sonomirco/index.json'
 
 jobs:
   # This workflow contains a single job called "build"
@@ -47,6 +46,9 @@ jobs:
       # non
       - name: 📦 Create the package
         run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release --include-symbols -p:PackageVersion=${{ steps.gitversion.outputs.semVer }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+        
+      - name: 📑 Dotnet NuGet Add Source
+        run: dotnet nuget add source --username sonomirco --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/sonomirco/index.json"
     
       - name: 🚀 Publish the package
-        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg --skip-duplicate -k ${{ secrets.GITHUB_TOKEN }}
+        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
