--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -6,7 +6,9 @@
     <RepositoryType>git</RepositoryType>
     <LangVersion>8</LangVersion>
     <PackageVersion>0.1.2</PackageVersion>
-    <PackageId>Pipeliine</PackageId>
+    <Version>0.1.1</Version>
+    <PackageId>Pipeline</PackageId>
+    <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
   </PropertyGroup>
 
