--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -9,14 +9,20 @@ env:
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
 
 jobs:
-  increment-version:
-    runs-on: ubuntu-latest
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repo.
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: 🛎 Checkout repo
         uses: actions/checkout@v2
-        with:
+        with: 
           fetch-depth: 0
-      - name: Setup dotnet
+
+      - name: 🚧 Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.x
