--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -27,17 +27,8 @@ jobs:
         with:
           dotnet-version: 5.0.x
       - name: Set env
-        run: echo "NUGET_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
-      
-      - name: 🧱 Build project
-        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:PackageVersion=${{ env.NUGET_VERSION }} -p:Version=${{ env.NUGET_VERSION }}
-
-      # create symbols package https://docs.microsoft.com/en-us/nuget/create-packages/symbol-packages-snupkg
-      - name: 📦 Create the package
-        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release -p:PackageVersion=${{ env.NUGET_VERSION }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
-        
-      - name: 📑 Dotnet NuGet Add Source
-        run: dotnet nuget add source --username sonomirco --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/sonomirco/index.json"
-    
-      - name: 🚀 Publish the package
-        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}\*.nupkg --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+        run: |
+          echo "NUGET_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
+          echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+          echo "NUGET_VERSION: ${{ env.NUGET_VERSION }}"
+          echo "TAG: ${{ env.TAG }}"
