--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -9,19 +9,27 @@ env:
   PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
 
 jobs:
-  increment-version:
-    runs-on: ubuntu-latest
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repo.
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: 🛎 Checkout repo
         uses: actions/checkout@v2
-        with:
+        with: 
           fetch-depth: 0
-      - name: Setup dotnet
+
+      - name: 🚧 Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: 5.0.x
       - name: Set env
         run: |
+          echo "$GITHUB_REF"
+          echo "${{ github.ref }}"
           echo "NUGET_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
           echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
           echo "NUGET_VERSION: ${{ env.NUGET_VERSION }}"
