--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -26,6 +26,17 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 5.0.x
+      
+      - name: Set env
+        run: |
+          echo "${{ github.event.release.tag_name }}"
+          echo "${{ github.ref }}"
+          echo "NUGET_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
+          echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
+          echo "TAGNAME=${{github.event.release.tag_name}}" >> $GITHUB_ENV
+          echo "NUGET_VERSION: ${{ env.NUGET_VERSION }}"
+          echo "TAG: ${{ env.TAG }}"
+          echo "TAG: ${{ env.TAGNAME }}"
 
       - name: 🧱 Build project
         run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:PackageVersion=${{ github.event.release.tag_name }} -p:Version=${{ github.event.release.tag_name }}
