--- a/.github/workflows/publish-alpha-release.yml
+++ b/.github/workflows/publish-alpha-release.yml
@@ -39,9 +39,12 @@ jobs:
                 }
                 else {
                   const splitLast = incoming.match(/(.*\.)(\d*)/)
+                  console.log("splitLast: " + splitLast)
                   const newTag =splitLast[1] + (parseInt(splitLast[2])+1)+'-alpha.0'
                   console.log("New Tag: " + newTag)
                   return newTag
                 }
       - name: Set NuGet version from alpha.
-        run: echo "NUGET_VERSION=${{steps.bump-with-alpha.outputs.result}}" >> $GITHUB_ENV
+        run: |
+          echo "NUGET_VERSION=${{steps.bump-with-alpha.outputs.result}}" >> $GITHUB_ENV
+          echo "TAG_VERSION: ${{ env.NUGET_VERSION }}"
