--- a/.github/workflows/publish-alpha-release.yml
+++ b/.github/workflows/publish-alpha-release.yml
@@ -1,22 +1,25 @@
 name: Tag and Publish Alpha
 
-on:
-  push:
-    branches:
-      - develop
+on: [push]
 
 jobs:
-  build-bump-alpha-publish:
-    runs-on: ubuntu-20.04
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repo.
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: 🛎 Checkout repo
         uses: actions/checkout@v2
-        with:
+        with: 
           fetch-depth: 0
-      - name: Setup dotnet
+
+      - name: 🚧 Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: 5.0.x
       - name: Get previous tag.
         id: version
         run: |
