--- a/.github/workflows/publish-alpha-release.yml
+++ b/.github/workflows/publish-alpha-release.yml
@@ -6,9 +6,7 @@ on:
       - develop
 
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  build-bump-alpha-publish:
     runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
