--- a/.github/workflows/publish-alpha-release.yml
+++ b/.github/workflows/publish-alpha-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-bump-alpha-publish:
-    runs-on: windows-latest
+    runs-on: ubuntu-20.04
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
