--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -7,19 +7,12 @@ on:
 
 env:
   PROJECT_PATH: 'Pipeline.csproj'
-  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
-  GIT_SOURCE_URL: 'https://nuget.pkg.github.com/sonomirco/index.json'
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-20.04
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: 🛎 Checkout repo
         uses: actions/checkout@v2
         with: 
@@ -28,31 +21,45 @@ jobs:
       - name: 🚧 Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 5.0.x
+          dotnet-version: 3.1.x
 
-      - name: ⚙️ Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.7
-        with:
-          versionSpec: '5.x'
+      - name: ⚙️ Get previous tag.
+        id: version
+        run: |
+          lastTag=`git tag -l --sort=-creatordate --format='%(refname:short)' | head -n 1`
+          echo "::set-output name=tag::$lastTag"
 
-      - name: ⚙️ Determine Version
-        id:   gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.7
-        
-      - name: Create alpha tag.
-        uses: tvdias/github-tagger@v0.0.1
+      - name: ⚙️ Bump if alpha.
+        id: bump-with-alpha
+        uses: actions/github-script@v3
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ steps.gitversion.outputs.semVer }}
+          result-encoding: string
+          script: |
+                const incoming = "${{steps.version.outputs.tag}}"
+                console.log("Incoming Tag: " + incoming)
+                if(incoming.includes('alpha')) {
+                  const oldNum = incoming.match(/alpha[.]*(\d+)/)[1]
+                  const newNum = parseInt(oldNum)+1
+                  const newTag = incoming.replace(/alpha.*\d+/, `alpha.${newNum}`)
+                  console.log("New Tag: " + newTag)
+                  return newTag
+                }
+                else {
+                  const splitLast = incoming.match(/(.*\.)(\d*)/)
+                  console.log("splitLast: " + splitLast)
+                  const newTag =splitLast[1] + (parseInt(splitLast[2])+1)+'-alpha.0'
+                  console.log("New Tag: " + newTag)
+                  return newTag
+                }
       
       - name: 🧱 Build project
-        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:PackageVersion=${{ steps.gitversion.outputs.semVer }}
+        run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:Version=${{ steps.bump-with-alpha.outputs.result }}
 
       - name: 📘 Create Release
         id: create_release
         uses: actions/create-release@v1
         with:
-          tag_name: ${{ steps.gitversion.outputs.semVer }}
-          release_name: ${{ steps.gitversion.outputs.semVer }}
+          tag_name: ${{ steps.bump-with-alpha.outputs.result }}
+          release_name: ${{ steps.bump-with-alpha.outputs.result }}
           draft: false
           prerelease: false
