--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: Release nuget
+name: Publish release
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
       - name: 🚧 Setup .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.x
+          dotnet-version: 5.0.x
 
       - name: ⚙️ Get previous tag.
         id: version
