--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -61,6 +61,8 @@ jobs:
       - name: 📘 Create Release
         id: create_release
         uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.bump-with-alpha.outputs.result }}
           release_name: ${{ steps.bump-with-alpha.outputs.result }}
