--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -28,15 +28,8 @@ jobs:
         with:
           dotnet-version: 5.0.x
       
-      - name: Set env
-        run: |
-          echo "${{ github.event.release.tag_name }}"
-          echo "${{ github.ref }}"
-          echo "NUGET_VERSION=$(echo ${GITHUB_REF:10})" >> $GITHUB_ENV
-          echo "TAG=${github.event.release.tag_name}" >> $GITHUB_ENV
-          echo "NUGET_VERSION: ${{ env.NUGET_VERSION }}"
-          echo "TAG: ${{ env.TAG }}"
-          echo "TAG_NAME: ${{ env.TAG_NAME }}"
+      - name: 🔧 Restore nuget with dotnet
+        run: dotnet restore ${{ env.PROJECT_PATH }}
 
       - name: 🧱 Build project
         run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:PackageVersion=${{ github.event.release.tag_name }} -p:Version=${{ github.event.release.tag_name }}
