--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Pipeline.AssemblyName</AssemblyName>
+    <AssemblyName>Pipeline</AssemblyName>
     <PackageTitle>Pipeline</PackageTitle>
     <PackageProjectUrl>https://sonomirco/Pipeline/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <Version>$(Version)</Version>
-    <PackageId>Pipeline.PackageId</PackageId>
+    <PackageId>Pipeline</PackageId>
     <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
-    <Summary>The Elements library provides object types for generating the built environment.</Summary>
+    <Summary>A test repository.</Summary>
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
   </PropertyGroup>
 
