--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AssemblyName>Pipeline</AssemblyName>
-    <PackageTitle>Pipeline</PackageTitle>
+    <PackageTitle>Pipeline.TestPipeline</PackageTitle>
     <PackageProjectUrl>https://sonomirco/Pipeline/</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <Version>$(Version)</Version>
-    <PackageId>Pipeline</PackageId>
+    <PackageId>Pipeline.TestPipeline</PackageId>
     <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
     <Summary>A test repository.</Summary>
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
