--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <AssemblyName>Pipeline</AssemblyName>
+    <AssemblyName>Pipeline.Basic</AssemblyName>
+    <PackageTitle>Pipeline Basic</PackageTitle>
     <PackageProjectUrl>https://sonomirco/Pipeline</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <Version>$(Version)</Version>
-    <PackageId>Pipeline</PackageId>
+    <PackageId>Pipeline.Basic</PackageId>
     <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
     <Summary>A test repository.</Summary>
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
