--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Authors>Mirco Bianchini</Authors>
     <AssemblyName>Pipeline.Basic</AssemblyName>
     <PackageTitle>Pipeline Basic</PackageTitle>
     <RepositoryType>git</RepositoryType>
