--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -49,16 +49,20 @@ jobs:
     if: github.event_name == 'release'
     runs-on: windows-latest
     steps:
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "3.1.x" # SDK Version to use.
+          source-url: https://nuget.pkg.github.com/sonomirco/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          
       - name: 💾 Download Artefact
         uses: actions/download-artifact@v1
         with:
           name: 'Pipeline-packages'
       
-      - name: 📑 Dotnet NuGet Add Source
-        run: dotnet nuget add source --username sonomirco --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/sonomirco/index.json"
-    
       - name: 🚀 Publish the package
-        run: dotnet nuget push .\Pipeline-packages\*.nupkg --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+        run: dotnet nuget push .\Pipeline-packages\*.nupkg --skip-duplicate
         
   push-nuget:
     name: 'Publish NuGet Packages'
@@ -66,6 +70,10 @@ jobs:
     if: github.event_name == 'release'
     runs-on: windows-latest
     steps:
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "3.1.x" # SDK Version to use.
+          
       - name: 💾 Download Artefact
         uses: actions/download-artifact@v1
         with:
