--- a/.github/workflows/publish-on-release.yml
+++ b/.github/workflows/publish-on-release.yml
@@ -48,32 +48,27 @@ jobs:
     needs: build
     if: github.event_name == 'release'
     runs-on: windows-latest
-    steps:
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "3.1.x" # SDK Version to use.
-          source-url: https://nuget.pkg.github.com/sonomirco/index.json
-        env:
-          NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          
+    steps:          
       - name: 💾 Download Artefact
         uses: actions/download-artifact@v1
         with:
           name: 'Pipeline-packages'
       
+      - name: 📑 Dotnet NuGet Add Source
+        run: dotnet nuget add source --username sonomirco --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/sonomirco/index.json"
+
       - name: 🚀 Publish the package
-        run: dotnet nuget push .\Pipeline-packages\*.nupkg --skip-duplicate
+        run: dotnet nuget push .\Pipeline-packages\*.nupkg --skip-duplicate --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
         
   push-nuget:
     name: 'Publish NuGet Packages'
     needs: build
     if: github.event_name == 'release'
+    environment:
+      name: 'NuGet'
+      url: https://www.nuget.org/packages/PipelineBasic
     runs-on: windows-latest
     steps:
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "3.1.x" # SDK Version to use.
-          
       - name: 💾 Download Artefact
         uses: actions/download-artifact@v1
         with:
