--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -2,12 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <Title>PipelineBasic</Title>
     <Authors>Mirco Bianchini</Authors>
+    <AssemblyName>PipelineBasic</AssemblyName>
     <Version>$(Version)</Version>
-    <PackageId>PipelineBasic</PackageId>
+    <PackageId>PipelineBasic</PackageId> // if not specify use the AssemblyName
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/sonomirco/Pipeline</PackageProjectUrl>
     <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
+    <PackageIconUrl>
+      https://github.com/sonomirco/Pipeline/pipeline-basic-logo.png
+    </PackageIconUrl>
+    <PackageTags>gitactions, release, templates</PackageTags>
     <Summary>A test repository.</Summary>
     <RepositoryUrl>https://github.com/sonomirco/Pipeline</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
 </Project>
