--- a/Pipeline.csproj
+++ b/Pipeline.csproj
@@ -6,7 +6,7 @@
     <Authors>Mirco Bianchini</Authors>
     <AssemblyName>PipelineBasic</AssemblyName>
     <Version>$(Version)</Version>
-    <PackageId>PipelineBasic</PackageId> // if not specify use the AssemblyName
+    <PackageId>PipelineBasic</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/sonomirco/Pipeline</PackageProjectUrl>
     <PackageDescription>A repo for testing a release pipeline.</PackageDescription>
