--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -8,9 +8,15 @@ on:
 
 env:
   PROJECT_PATH: 'Pipeline.csproj'
+  PACKAGE_OUTPUT_DIRECTORY: ${{ github.workspace }}\output
+  TAG_NAME: ${{ github.event.release.tag_name }}
+  NUGET_SOURCE_URL: 'https://api.nuget.org/v3/index.json'
 
 jobs:
   build:
+    environment:
+      name: 'NuGet'
+      url: https://www.nuget.org/packages/PipelineBasic
     if: github.event.action == 'closed' && github.event.pull_request.merged == true
     runs-on: ubuntu-20.04
 
@@ -57,6 +63,12 @@ jobs:
       
       - name: 🧱 Build project
         run: dotnet build ${{ env.PROJECT_PATH }} --no-restore --configuration Release -p:Version=${{ steps.bump-with-alpha.outputs.result }}
+        
+      - name: 📦 Create the package
+        run: dotnet pack ${{ env.PROJECT_PATH }} --no-restore --no-build --configuration Release -p:PackageVersion=${{ steps.bump-with-alpha.outputs.result }} --output ${{ env.PACKAGE_OUTPUT_DIRECTORY }}
+        
+      - name: 🚀 Publish the package
+        run: dotnet nuget push ${{ env.PACKAGE_OUTPUT_DIRECTORY }}/*.nupkg --skip-duplicate -k ${{ secrets.NUGET_API_KEY }} -s ${{ env.NUGET_SOURCE_URL }}
 
       - name: 📘 Create Release
         id: create_release
