--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -81,7 +81,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: "uploadedArtifact"
-          path: artifact.7z
+          path: ${{ github.workspace }}/artifact.7z
 
       - name: Upload server binaries to release
         uses: svenstaro/upload-release-action@v1-release
