--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      # the output of this is only the tag, but you don't need check
       - id: pipelineRelease
         uses: pozetroninc/github-action-get-latest-release@master
         with:
@@ -25,6 +26,12 @@ jobs:
         with: 
           fetch-depth: 0
           
+      - name: Get release
+        id: get_release
+        uses: bruceadams/get-release@v1.2.3
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+          
       - name: 7Zip server
         run: 7z a -o${{ github.workspace }} -t7z -mx=9 artifact.7z ./bin/Debug/net5.0
       
@@ -32,3 +39,9 @@ jobs:
         run: |
           echo ${{ github.ref }}
           echo ${{ steps.pipelineRelease.outputs.release }}
+          echo ${{ steps.get_release.outputs.upload_url }}
+          echo $(basename ${{ github.workspace }})
+          for filename in ${{ github.workspace }}
+          do
+            echo $filename
+          done;
