--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -30,7 +30,7 @@ jobs:
         id: get_release
         uses: bruceadams/get-release@v1.2.2
         env:
-          GITHUB_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: 7Zip server
         run: 7z a -o${{ github.workspace }} -t7z -mx=9 artifact.7z ./bin/Debug/net5.0
