--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -20,17 +20,18 @@ jobs:
           owner: sonomirco
           repo: Pipeline
           excludes: prerelease, draft
+          
+      - id : get_release_out
+      - uses: cardinalby/git-get-release-action@v1.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag: ${{ steps.pipelineRelease.outputs.release }} 
     
       - name: 🛎 Checkout repo
         uses: actions/checkout@v2
         with: 
           fetch-depth: 0
-          
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: 7Zip server
         run: 7z a -o${{ github.workspace }} -t7z -mx=9 artifact.7z ./bin/Debug/net5.0
@@ -38,7 +39,7 @@ jobs:
       - name: 📜 Display
         run: |
           echo ${{ github.ref }}
-          echo ${{ steps.pipelineRelease.outputs.release }}
+          echo ${{ steps.get_release_out.outputs.release }}
           echo ${{ steps.get_release.outputs.upload_url }}
           echo $(basename ${{ github.workspace }})
           for filename in ${{ github.workspace }}
