--- a/.github/workflows/create_zip.yml
+++ b/.github/workflows/create_zip.yml
@@ -42,7 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.get_release_out.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/Output/*
+          asset_path: ${{ github.workspace }}/Output
           asset_name: myArtifact
           asset_content_type: application/7Zip
       
