--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -66,6 +66,8 @@ jobs:
         name: 📄 read file
         run: |
           value=`cat revision.txt`
-          echo $value | | sed -e 's/\<alpha.\>//g'
+          newvalue='$value | sed -e 's/\<alpha.\>//g''
+          echo "version_new=$newvalue" >> $GITHUB_ENV
           echo "version_state=$value" >> $GITHUB_ENV
           echo "${{ env.version_state }}"
+          echo "${{ env.version_new }}"
