--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -67,6 +67,8 @@ jobs:
         run: |
           value=`cat revision.txt`
           newvalue='$value | sed -e 's/\<alpha.\>//g''
+          echo $value
+          echo $newvalue
           echo "version_new=$newvalue" >> $GITHUB_ENV
           echo "version_state=$value" >> $GITHUB_ENV
           echo "${{ env.version_state }}"
