--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -66,7 +66,7 @@ jobs:
         name: 📄 read file
         run: |
           value=`cat revision.txt`
-          newvalue='$value | sed -e 's/\<alpha.\>//g''
+          newvalue=$($value | sed -e 's/\<alpha.\>//g')
           echo $value
           echo $newvalue
           echo "version_new=$newvalue" >> $GITHUB_ENV
