--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -66,10 +66,10 @@ jobs:
         name: 📄 read file
         run: |
           value=`cat revision.txt`
-          newvalue=`$value | sed -e 's/\<alpha.\>//g'`
           echo $value
-          echo $newvalue
-          echo "version_new=$newvalue" >> $GITHUB_ENV
+          echo $value | sed -e 's/\<alpha.\>//g'
+          #echo $newvalue
+          #echo "version_new=$newvalue" >> $GITHUB_ENV
           echo "version_state=$value" >> $GITHUB_ENV
           echo "${{ env.version_state }}"
-          echo "${{ env.version_new }}"
+          #echo "${{ env.version_new }}"
