--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -67,9 +67,5 @@ jobs:
         run: |
           value=`cat revision.txt`
           echo $value
-          echo $value | sed -e 's/\<alpha[.]\>//g'
-          #echo $newvalue
-          #echo "version_new=$newvalue" >> $GITHUB_ENV
-          echo "version_state=$value" >> $GITHUB_ENV
-          echo "${{ env.version_state }}"
-          #echo "${{ env.version_new }}"
+          echo $value | sed -e 's/\<alpha\>//g'
+          
