--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -67,6 +67,6 @@ jobs:
         run: |
           value=`cat revision.txt`
           echo $value
-          newvalue=`$value | sed -e 's/\<alpha\>//g'`
+          newvalue=$value | sed -e 's/\<alpha\>//g'
           echo $newvalue
           
