--- a/.github/workflows/cutting-text.yml
+++ b/.github/workflows/cutting-text.yml
@@ -67,8 +67,10 @@ jobs:
         run: |
           value=`cat revision.txt`
           echo "version_state=$value" >> $GITHUB_ENV
-          echo "${{ env.version_state }}"
+          echo ${{ env.version_state }}
           newvalue=`echo $value | sed 's/-\w\+//g'`
           echo "version_new=$newvalue" >> $GITHUB_ENV
-          echo "${{ env.version_new }}"
+          echo ${{ env.version_new }}
+          echo $value
+          echo $newvalue
           
